# multilayer-perceptron

./: pyproject.toml
numpy_keras/layers/: activation.py  batch_norm.py  dense.py  dropout.py  flatten.py  input.py
numpy_keras/models/: sequential.py
